partiql-beamline-query/tests/snapshots/simple__path_test_complex-full-depth2_test_data.snap
---
source: partiql-beamline-query/tests/simple.rs
expression: output
---
[
    [*].*: AnyOf(AnyOf { types: {Static(StaticType { ty: String, nullable: true }), Static(StaticType { ty: Int64, nullable: true }), Static(StaticType { ty: DateTime, nullable: true }), Static(StaticType { ty: Bool, nullable: true })} }),
    [*].*: AnyOf(AnyOf { types: {AnyOf(AnyOf { types: {Static(StaticType { ty: Struct(StructType { constraints: {Fields({StructField { optional: false, name: "value", ty: Static(StaticType { ty: DecimalP(7, 4), nullable: true }) }, StructField { optional: false, name: "currency", ty: Static(StaticType { ty: String, nullable: true }) }})} }), nullable: true }), Static(StaticType { ty: DecimalP(3, 2), nullable: true }), Static(StaticType { ty: DecimalP(4, 2), nullable: true }), Static(StaticType { ty: DecimalP(5, 2), nullable: true })} }), Static(StaticType { ty: Struct(StructType { constraints: {Fields({StructField { optional: false, name: "test_decimal", ty: Static(StaticType { ty: DecimalP(3, 0), nullable: true }) }, StructField { optional: false, name: "test_string", ty: Static(StaticType { ty: String, nullable: true }) }})} }), nullable: true })} }),
    [*].*: Static(StaticType { ty: Struct(StructType { constraints: {Fields({StructField { optional: false, name: "nested_struct", ty: Static(StaticType { ty: Struct(StructType { constraints: {Fields({StructField { optional: false, name: "nested_struct", ty: Static(StaticType { ty: Struct(StructType { constraints: {Fields({StructField { optional: false, name: "nested_struct", ty: Static(StaticType { ty: Struct(StructType { constraints: {Fields({StructField { optional: false, name: "nested_struct", ty: Static(StaticType { ty: Struct(StructType { constraints: {Fields({StructField { optional: false, name: "nested_struct", ty: Static(StaticType { ty: Struct(StructType { constraints: {Fields({StructField { optional: false, name: "test_int", ty: Static(StaticType { ty: Int8, nullable: true }) }})} }), nullable: true }) }})} }), nullable: true }) }})} }), nullable: true }) }})} }), nullable: true }) }})} }), nullable: true }) }})} }), nullable: true }),
    [*].transaction_id: Static(StaticType { ty: String, nullable: true }),
    [*].marketplace_id: Static(StaticType { ty: Int64, nullable: true }),
    [*].country_code: Static(StaticType { ty: String, nullable: true }),
    [*].created_at: Static(StaticType { ty: DateTime, nullable: true }),
    [*].test_address: Static(StaticType { ty: String, nullable: true }),
    [*].completed: Static(StaticType { ty: Bool, nullable: true }),
    [*].description: Static(StaticType { ty: String, nullable: true }),
    [*].price: Static(StaticType { ty: Struct(StructType { constraints: {Fields({StructField { optional: false, name: "value", ty: Static(StaticType { ty: DecimalP(7, 4), nullable: true }) }, StructField { optional: false, name: "currency", ty: Static(StaticType { ty: String, nullable: true }) }})} }), nullable: true }),
    [*].price: AnyOf(AnyOf { types: {Static(StaticType { ty: DecimalP(3, 2), nullable: true }), Static(StaticType { ty: DecimalP(4, 2), nullable: true }), Static(StaticType { ty: DecimalP(5, 2), nullable: true })} }),
    [*].test_struct: Static(StaticType { ty: Struct(StructType { constraints: {Fields({StructField { optional: false, name: "test_decimal", ty: Static(StaticType { ty: DecimalP(3, 0), nullable: true }) }, StructField { optional: false, name: "test_string", ty: Static(StaticType { ty: String, nullable: true }) }})} }), nullable: true }),
    [*].test_nest_struct: Static(StaticType { ty: Struct(StructType { constraints: {Fields({StructField { optional: false, name: "nested_struct", ty: Static(StaticType { ty: Struct(StructType { constraints: {Fields({StructField { optional: false, name: "nested_struct", ty: Static(StaticType { ty: Struct(StructType { constraints: {Fields({StructField { optional: false, name: "nested_struct", ty: Static(StaticType { ty: Struct(StructType { constraints: {Fields({StructField { optional: false, name: "nested_struct", ty: Static(StaticType { ty: Struct(StructType { constraints: {Fields({StructField { optional: false, name: "nested_struct", ty: Static(StaticType { ty: Struct(StructType { constraints: {Fields({StructField { optional: false, name: "test_int", ty: Static(StaticType { ty: Int8, nullable: true }) }})} }), nullable: true }) }})} }), nullable: true }) }})} }), nullable: true }) }})} }), nullable: true }) }})} }), nullable: true }) }})} }), nullable: true }),
    [*]: Static(StaticType { ty: Struct(StructType { constraints: {Fields({StructField { optional: false, name: "transaction_id", ty: Static(StaticType { ty: String, nullable: true }) }, StructField { optional: false, name: "marketplace_id", ty: Static(StaticType { ty: Int64, nullable: true }) }, StructField { optional: false, name: "country_code", ty: Static(StaticType { ty: String, nullable: true }) }, StructField { optional: false, name: "created_at", ty: Static(StaticType { ty: DateTime, nullable: true }) }, StructField { optional: false, name: "test_address", ty: Static(StaticType { ty: String, nullable: true }) }, StructField { optional: false, name: "completed", ty: Static(StaticType { ty: Bool, nullable: true }) }, StructField { optional: false, name: "description", ty: Static(StaticType { ty: String, nullable: true }) }, StructField { optional: false, name: "price", ty: AnyOf(AnyOf { types: {Static(StaticType { ty: Struct(StructType { constraints: {Fields({StructField { optional: false, name: "value", ty: Static(StaticType { ty: DecimalP(7, 4), nullable: true }) }, StructField { optional: false, name: "currency", ty: Static(StaticType { ty: String, nullable: true }) }})} }), nullable: true }), Static(StaticType { ty: DecimalP(3, 2), nullable: true }), Static(StaticType { ty: DecimalP(4, 2), nullable: true }), Static(StaticType { ty: DecimalP(5, 2), nullable: true })} }) }, StructField { optional: false, name: "test_struct", ty: Static(StaticType { ty: Struct(StructType { constraints: {Fields({StructField { optional: false, name: "test_decimal", ty: Static(StaticType { ty: DecimalP(3, 0), nullable: true }) }, StructField { optional: false, name: "test_string", ty: Static(StaticType { ty: String, nullable: true }) }})} }), nullable: true }) }, StructField { optional: false, name: "test_nest_struct", ty: Static(StaticType { ty: Struct(StructType { constraints: {Fields({StructField { optional: false, name: "nested_struct", ty: Static(StaticType { ty: Struct(StructType { constraints: {Fields({StructField { optional: false, name: "nested_struct", ty: Static(StaticType { ty: Struct(StructType { constraints: {Fields({StructField { optional: false, name: "nested_struct", ty: Static(StaticType { ty: Struct(StructType { constraints: {Fields({StructField { optional: false, name: "nested_struct", ty: Static(StaticType { ty: Struct(StructType { constraints: {Fields({StructField { optional: false, name: "nested_struct", ty: Static(StaticType { ty: Struct(StructType { constraints: {Fields({StructField { optional: false, name: "test_int", ty: Static(StaticType { ty: Int8, nullable: true }) }})} }), nullable: true }) }})} }), nullable: true }) }})} }), nullable: true }) }})} }), nullable: true }) }})} }), nullable: true }) }})} }), nullable: true }) }})} }), nullable: true }),
    : Static(StaticType { ty: Bag(BagType { element_type: Static(StaticType { ty: Struct(StructType { constraints: {Fields({StructField { optional: false, name: "transaction_id", ty: Static(StaticType { ty: String, nullable: true }) }, StructField { optional: false, name: "marketplace_id", ty: Static(StaticType { ty: Int64, nullable: true }) }, StructField { optional: false, name: "country_code", ty: Static(StaticType { ty: String, nullable: true }) }, StructField { optional: false, name: "created_at", ty: Static(StaticType { ty: DateTime, nullable: true }) }, StructField { optional: false, name: "test_address", ty: Static(StaticType { ty: String, nullable: true }) }, StructField { optional: false, name: "completed", ty: Static(StaticType { ty: Bool, nullable: true }) }, StructField { optional: false, name: "description", ty: Static(StaticType { ty: String, nullable: true }) }, StructField { optional: false, name: "price", ty: AnyOf(AnyOf { types: {Static(StaticType { ty: Struct(StructType { constraints: {Fields({StructField { optional: false, name: "value", ty: Static(StaticType { ty: DecimalP(7, 4), nullable: true }) }, StructField { optional: false, name: "currency", ty: Static(StaticType { ty: String, nullable: true }) }})} }), nullable: true }), Static(StaticType { ty: DecimalP(3, 2), nullable: true }), Static(StaticType { ty: DecimalP(4, 2), nullable: true }), Static(StaticType { ty: DecimalP(5, 2), nullable: true })} }) }, StructField { optional: false, name: "test_struct", ty: Static(StaticType { ty: Struct(StructType { constraints: {Fields({StructField { optional: false, name: "test_decimal", ty: Static(StaticType { ty: DecimalP(3, 0), nullable: true }) }, StructField { optional: false, name: "test_string", ty: Static(StaticType { ty: String, nullable: true }) }})} }), nullable: true }) }, StructField { optional: false, name: "test_nest_struct", ty: Static(StaticType { ty: Struct(StructType { constraints: {Fields({StructField { optional: false, name: "nested_struct", ty: Static(StaticType { ty: Struct(StructType { constraints: {Fields({StructField { optional: false, name: "nested_struct", ty: Static(StaticType { ty: Struct(StructType { constraints: {Fields({StructField { optional: false, name: "nested_struct", ty: Static(StaticType { ty: Struct(StructType { constraints: {Fields({StructField { optional: false, name: "nested_struct", ty: Static(StaticType { ty: Struct(StructType { constraints: {Fields({StructField { optional: false, name: "nested_struct", ty: Static(StaticType { ty: Struct(StructType { constraints: {Fields({StructField { optional: false, name: "test_int", ty: Static(StaticType { ty: Int8, nullable: true }) }})} }), nullable: true }) }})} }), nullable: true }) }})} }), nullable: true }) }})} }), nullable: true }) }})} }), nullable: true }) }})} }), nullable: true }) }})} }), nullable: true }) }), nullable: true }),
]
