partiql-beamline-query/tests/snapshots/simple__path_test_simple-full-project_test_data.snap
---
source: partiql-beamline-query/tests/simple.rs
expression: output
---
[
    [*].*: AnyOf(NOT NULL String, NOT NULL Int8, String, DateTime, Bool, String, Decimal(7,2)),
    [*].transaction_id: NOT NULL String,
    [*].marketplace_id: NOT NULL Int8,
    [*].country_code: String,
    [*].created_at: DateTime,
    [*].completed: Bool,
    [*].description: String,
    [*].price: Decimal(7,2),
    [*]: {transaction_id: NOT NULL String, marketplace_id: NOT NULL Int8, country_code: String, created_at: DateTime, completed: Bool, description: String, price?: Decimal(7,2)},
    : <<{transaction_id: NOT NULL String, marketplace_id: NOT NULL Int8, country_code: String, created_at: DateTime, completed: Bool, description: String, price?: Decimal(7,2)}>>,
]
