partiql-beamline-query/tests/snapshots/simple__simple_random_strategy.snap
---
source: partiql-beamline-query/tests/simple.rs
expression: queries
---
SELECT *
FROM test_data AS test_data
WHERE true

SELECT *
FROM test_data AS test_data
WHERE false

SELECT *
FROM test_data AS test_data
WHERE false

SELECT *
FROM test_data AS test_data
WHERE true

SELECT *
FROM test_data AS test_data
WHERE true
